# trading-bot

./: .gitignore  .pre-commit-config.yaml  README.md  dev.sh  get-data-set-from  get-trades-from  pyproject.toml  requirements.txt  run_backtest.py  start.sh  stop.sh  test_ai.py  test_ui.py
.cursor/commands/: add-concept-definition.md  analyze-setup.md  ask-cto.md  ask-designer.md  ask-scalper.md  backtest-lab.md  code-maintenance.md  commit-and-push.md  create-cursor-command.md  create-cursor-rule.md  extract-trading-info.md  fetch-data.md  generate-strategy-v0.md  indicator-to-spec.md  kill-the-dead.md  make-a-rule.md  ollama.md  parse-transcript.md  run-dev.md  skeleton-to-strategy.md  sync-docs.md  sync-strategy-docs.md  trade-breakdown-report.md  transcript-to-skeleton.md
.cursor/plans/: craig_percoco_strategy_indicators_ea766990.plan.md
.cursor/rules/: dashboard-refactoring-plan.mdc  maintain-folder-readmes.mdc  python-coding-guidelines.mdc  python-file-organization.mdc  textual-ui-patterns.mdc  update-documentation-on-changes.mdc
Old/indicators/: ADX.pine  fvg_indicator_v1.pine  market_structure_v1.pine  markt_structure_break_and_order.pine
bot/: README.md  __init__.py
bot/ai/: README.md  __init__.py  analyzer.py  decision_analyzer.py  decision_logger.py  interpretation_scheduler.py  models.py  ollama_client.py  portfolio_allocator.py  prompts.py  scalper_interpreter.py  signal_brain.py  strategies.py
bot/backtest/: README.md  __init__.py  breakout_analyzer.py  engine.py  models.py  position_manager.py
bot/core/: README.md  __init__.py  candle_aggregator.py  config.py  data_buffer.py  levels.py  models.py  trading_core.py
bot/historical/: README.md  __init__.py  cli.py  fetcher.py  fill_parser.py  models.py  s3_fetcher.py  trade_storage.py  trades_cli.py
bot/hyperliquid/: README.md  __init__.py  client.py  public_data.py  stream.py  test_connection.py  watch_prices.py  websocket_manager.py
bot/indicators/: README.md  __init__.py  atr.py  macd.py  moving_averages.py  rsi.py
bot/live/: README.md  __init__.py  engine.py
bot/signals/: README.md  __init__.py  aggregator.py  base.py  macd.py  momentum.py  rsi.py  validator.py
bot/simulation/: README.md  __init__.py  historical_source.py  models.py  opportunity_seeker.py  paper_trader.py  run_simulator.py  state_manager.py
bot/strategies/: README.md  (+10 more)
data/: README.md
docs/: README.md  commands.md  setup-guide.md  trading-flow.md
indicators/: market_structure_v1.pine
tests/: README.md  __init__.py  test_backtest.py  test_indicators.py  test_signals.py  test_volume_profile.py
(+114 files in other folders)
